--- a/code/ex3.2.ipynb
+++ b/code/ex3.2.ipynb
@@ -6,6 +6,453 @@
    "source": [
     "EXERCISE 3.2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np \n",
+    "import scipy.linalg as lin\n",
+    "import scipy.sparse as sp\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# radius is set tot 2\n",
+    "\n",
+    "# n = 41 makes the spacing nice; n = 21 is another options.\n",
+    "# In general, the spacing has to be chosen s.t. the source coordinate can be recognized.\n",
+    "#  \n",
+    "\n",
+    "def laplacian_circle_matrix(n): \n",
+    "    N = n * n  \n",
+    "    laplacian = np.zeros((N, N)) \n",
+    "    points_within_boundary = []\n",
+    "    \n",
+    "    x = np.linspace(-2, 2, n)\n",
+    "    y = np.linspace(-2, 2, n)\n",
+    "    \n",
+    "\n",
+    "    # This as all the same as in 3.1:\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if x[i]**2 + y[j]**2 <= 4:\n",
+    "                index = i * n + j  # corresponding index in the stacked vector\n",
+    "                points_within_boundary.append(index)\n",
+    "    \n",
+    "    for i in range(N):  \n",
+    "        if i in points_within_boundary:  \n",
+    "            laplacian[i, i] = -4  \n",
+    "\n",
+    "        if (i - 1 in points_within_boundary) and (i % n) != 0:\n",
+    "            laplacian[i, i - 1] = 1\n",
+    "            laplacian[i - 1, i] = 1 \n",
+    "\n",
+    "        if (i + 1 in points_within_boundary) and ((i + 1) % n) != 0:\n",
+    "            laplacian[i, i + 1] = 1\n",
+    "            laplacian[i + 1, i] = 1  \n",
+    "\n",
+    "        if (i - n in points_within_boundary):\n",
+    "            laplacian[i, i - n] = 1\n",
+    "            laplacian[i - n, i] = 1  \n",
+    "\n",
+    "        if (i + n in points_within_boundary):\n",
+    "            laplacian[i, i + n] = 1\n",
+    "            laplacian[i + n, i] = 1\n",
+    "\n",
+    "    # We also need to incorporate the source, this means overwriting 1 row in the matrix:\n",
+    "    index_source_row =  np.where(np.isclose(x,0.6))[0]*n + np.where(np.isclose(y,1.2))[0] #There really should be a way to make this cleaner\n",
+    "    laplacian[index_source_row,:] = 0\n",
+    "    laplacian[index_source_row,index_source_row] = 1\n",
+    "\n",
+    "    return points_within_boundary\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10,\n",
+       " 27,\n",
+       " 28,\n",
+       " 29,\n",
+       " 30,\n",
+       " 31,\n",
+       " 32,\n",
+       " 33,\n",
+       " 34,\n",
+       " 35,\n",
+       " 46,\n",
+       " 47,\n",
+       " 48,\n",
+       " 49,\n",
+       " 50,\n",
+       " 51,\n",
+       " 52,\n",
+       " 53,\n",
+       " 54,\n",
+       " 55,\n",
+       " 56,\n",
+       " 57,\n",
+       " 66,\n",
+       " 67,\n",
+       " 68,\n",
+       " 69,\n",
+       " 70,\n",
+       " 71,\n",
+       " 72,\n",
+       " 73,\n",
+       " 74,\n",
+       " 75,\n",
+       " 76,\n",
+       " 77,\n",
+       " 78,\n",
+       " 79,\n",
+       " 80,\n",
+       " 86,\n",
+       " 87,\n",
+       " 88,\n",
+       " 89,\n",
+       " 90,\n",
+       " 91,\n",
+       " 92,\n",
+       " 93,\n",
+       " 94,\n",
+       " 95,\n",
+       " 96,\n",
+       " 97,\n",
+       " 98,\n",
+       " 99,\n",
+       " 100,\n",
+       " 101,\n",
+       " 102,\n",
+       " 107,\n",
+       " 108,\n",
+       " 109,\n",
+       " 110,\n",
+       " 111,\n",
+       " 112,\n",
+       " 113,\n",
+       " 114,\n",
+       " 115,\n",
+       " 116,\n",
+       " 117,\n",
+       " 118,\n",
+       " 119,\n",
+       " 120,\n",
+       " 121,\n",
+       " 122,\n",
+       " 123,\n",
+       " 127,\n",
+       " 128,\n",
+       " 129,\n",
+       " 130,\n",
+       " 131,\n",
+       " 132,\n",
+       " 133,\n",
+       " 134,\n",
+       " 135,\n",
+       " 136,\n",
+       " 137,\n",
+       " 138,\n",
+       " 139,\n",
+       " 140,\n",
+       " 141,\n",
+       " 142,\n",
+       " 143,\n",
+       " 144,\n",
+       " 145,\n",
+       " 148,\n",
+       " 149,\n",
+       " 150,\n",
+       " 151,\n",
+       " 152,\n",
+       " 153,\n",
+       " 154,\n",
+       " 155,\n",
+       " 156,\n",
+       " 157,\n",
+       " 158,\n",
+       " 159,\n",
+       " 160,\n",
+       " 161,\n",
+       " 162,\n",
+       " 163,\n",
+       " 164,\n",
+       " 165,\n",
+       " 166,\n",
+       " 169,\n",
+       " 170,\n",
+       " 171,\n",
+       " 172,\n",
+       " 173,\n",
+       " 174,\n",
+       " 175,\n",
+       " 176,\n",
+       " 177,\n",
+       " 178,\n",
+       " 179,\n",
+       " 180,\n",
+       " 181,\n",
+       " 182,\n",
+       " 183,\n",
+       " 184,\n",
+       " 185,\n",
+       " 186,\n",
+       " 187,\n",
+       " 190,\n",
+       " 191,\n",
+       " 192,\n",
+       " 193,\n",
+       " 194,\n",
+       " 195,\n",
+       " 196,\n",
+       " 197,\n",
+       " 198,\n",
+       " 199,\n",
+       " 200,\n",
+       " 201,\n",
+       " 202,\n",
+       " 203,\n",
+       " 204,\n",
+       " 205,\n",
+       " 206,\n",
+       " 207,\n",
+       " 208,\n",
+       " 210,\n",
+       " 211,\n",
+       " 212,\n",
+       " 213,\n",
+       " 214,\n",
+       " 215,\n",
+       " 216,\n",
+       " 217,\n",
+       " 218,\n",
+       " 219,\n",
+       " 220,\n",
+       " 221,\n",
+       " 222,\n",
+       " 223,\n",
+       " 224,\n",
+       " 225,\n",
+       " 226,\n",
+       " 227,\n",
+       " 228,\n",
+       " 229,\n",
+       " 230,\n",
+       " 232,\n",
+       " 233,\n",
+       " 234,\n",
+       " 235,\n",
+       " 236,\n",
+       " 237,\n",
+       " 238,\n",
+       " 239,\n",
+       " 240,\n",
+       " 241,\n",
+       " 242,\n",
+       " 243,\n",
+       " 244,\n",
+       " 245,\n",
+       " 246,\n",
+       " 247,\n",
+       " 248,\n",
+       " 249,\n",
+       " 250,\n",
+       " 253,\n",
+       " 254,\n",
+       " 255,\n",
+       " 256,\n",
+       " 257,\n",
+       " 258,\n",
+       " 259,\n",
+       " 260,\n",
+       " 261,\n",
+       " 262,\n",
+       " 263,\n",
+       " 264,\n",
+       " 265,\n",
+       " 266,\n",
+       " 267,\n",
+       " 268,\n",
+       " 269,\n",
+       " 270,\n",
+       " 271,\n",
+       " 274,\n",
+       " 275,\n",
+       " 276,\n",
+       " 277,\n",
+       " 278,\n",
+       " 279,\n",
+       " 280,\n",
+       " 281,\n",
+       " 282,\n",
+       " 283,\n",
+       " 284,\n",
+       " 285,\n",
+       " 286,\n",
+       " 287,\n",
+       " 288,\n",
+       " 289,\n",
+       " 290,\n",
+       " 291,\n",
+       " 292,\n",
+       " 295,\n",
+       " 296,\n",
+       " 297,\n",
+       " 298,\n",
+       " 299,\n",
+       " 300,\n",
+       " 301,\n",
+       " 302,\n",
+       " 303,\n",
+       " 304,\n",
+       " 305,\n",
+       " 306,\n",
+       " 307,\n",
+       " 308,\n",
+       " 309,\n",
+       " 310,\n",
+       " 311,\n",
+       " 312,\n",
+       " 313,\n",
+       " 317,\n",
+       " 318,\n",
+       " 319,\n",
+       " 320,\n",
+       " 321,\n",
+       " 322,\n",
+       " 323,\n",
+       " 324,\n",
+       " 325,\n",
+       " 326,\n",
+       " 327,\n",
+       " 328,\n",
+       " 329,\n",
+       " 330,\n",
+       " 331,\n",
+       " 332,\n",
+       " 333,\n",
+       " 339,\n",
+       " 340,\n",
+       " 341,\n",
+       " 342,\n",
+       " 343,\n",
+       " 344,\n",
+       " 345,\n",
+       " 346,\n",
+       " 347,\n",
+       " 348,\n",
+       " 349,\n",
+       " 350,\n",
+       " 351,\n",
+       " 352,\n",
+       " 353,\n",
+       " 360,\n",
+       " 361,\n",
+       " 362,\n",
+       " 363,\n",
+       " 364,\n",
+       " 365,\n",
+       " 366,\n",
+       " 367,\n",
+       " 368,\n",
+       " 369,\n",
+       " 370,\n",
+       " 371,\n",
+       " 372,\n",
+       " 373,\n",
+       " 374,\n",
+       " 382,\n",
+       " 383,\n",
+       " 384,\n",
+       " 385,\n",
+       " 386,\n",
+       " 387,\n",
+       " 388,\n",
+       " 389,\n",
+       " 390,\n",
+       " 391,\n",
+       " 392,\n",
+       " 393,\n",
+       " 405,\n",
+       " 406,\n",
+       " 407,\n",
+       " 408,\n",
+       " 409,\n",
+       " 410,\n",
+       " 411,\n",
+       " 412,\n",
+       " 413,\n",
+       " 430]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "laplacian_circle_matrix(21)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let M equal to matrix returned by the function above. b = (0,0,...,0,1,0,...,0,0), more carefully defined in the report.\n",
+    "# We now solve Mc = b\n",
+    "# We first consider the system for n = 21\n",
+    "\n",
+    "x = np.linspace(-2, 2, 21)\n",
+    "y = np.linspace(-2, 2, 21)\n",
+    "\n",
+    "b = np.zeros(441)\n",
+    "b[np.where(np.isclose(x,0.6))[0]*21 + np.where(np.isclose(y,1.2))[0]] = 1\n",
+    "\n",
+    "M = laplacian_circle_matrix(21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LinAlgError",
+     "evalue": "Matrix is singular.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mLinAlgError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[74], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mlin\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msolve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mM\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\scipy\\linalg\\_basic.py:290\u001b[0m, in \u001b[0;36msolve\u001b[1;34m(a, b, lower, overwrite_a, overwrite_b, check_finite, assume_a, transposed)\u001b[0m\n\u001b[0;32m    285\u001b[0m     lwork \u001b[38;5;241m=\u001b[39m _compute_lwork(sysv_lw, n, lower)\n\u001b[0;32m    286\u001b[0m     lu, ipvt, x, info \u001b[38;5;241m=\u001b[39m sysv(a1, b1, lwork\u001b[38;5;241m=\u001b[39mlwork,\n\u001b[0;32m    287\u001b[0m                              lower\u001b[38;5;241m=\u001b[39mlower,\n\u001b[0;32m    288\u001b[0m                              overwrite_a\u001b[38;5;241m=\u001b[39moverwrite_a,\n\u001b[0;32m    289\u001b[0m                              overwrite_b\u001b[38;5;241m=\u001b[39moverwrite_b)\n\u001b[1;32m--> 290\u001b[0m     \u001b[43m_solve_check\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minfo\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    291\u001b[0m     rcond, info \u001b[38;5;241m=\u001b[39m sycon(lu, ipvt, anorm)\n\u001b[0;32m    292\u001b[0m \u001b[38;5;66;03m# Diagonal case\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\scipy\\linalg\\_basic.py:42\u001b[0m, in \u001b[0;36m_solve_check\u001b[1;34m(n, info, lamch, rcond)\u001b[0m\n\u001b[0;32m     40\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLAPACK reported an illegal value in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;241m-\u001b[39minfo\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m-th argument.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     41\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;241m0\u001b[39m \u001b[38;5;241m<\u001b[39m info:\n\u001b[1;32m---> 42\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m LinAlgError(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMatrix is singular.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     44\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m lamch \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     45\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n",
+      "\u001b[1;31mLinAlgError\u001b[0m: Matrix is singular."
+     ]
+    }
+   ],
+   "source": [
+    "lin.solve(M,b)"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +462,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.1"
   }
  },
