--- a/code/ex3.2.ipynb
+++ b/code/ex3.2.ipynb
@@ -453,6 +453,175 @@
    "source": [
     "lin.solve(M,b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def laplacian_circle_test(n):\n",
+    "    N = n * n \n",
+    "    laplacian = np.zeros((N, N)) \n",
+    "    points_within_boundary = []\n",
+    "\n",
+    "    x = np.linspace(-2, 2, n)  \n",
+    "    y = np.linspace(-2, 2, n)  \n",
+    "\n",
+    "    index_map = {} \n",
+    "    count = 0 \n",
+    "\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if x[i]**2 + y[j]**2 <= 4:\n",
+    "                index = count  # Assign a unique 1D index\n",
+    "                index_map[(i, j)] = index\n",
+    "                points_within_boundary.append((i, j))\n",
+    "                count += 1\n",
+    "\n",
+    "    # Construct Laplacian matrix using finite difference stencil\n",
+    "    for (i, j) in points_within_boundary:\n",
+    "        index = index_map[(i, j)]\n",
+    "        laplacian[index, index] = -4  # Center point\n",
+    "\n",
+    "        # Check and add valid neighbors\n",
+    "        for di, dj in [(-1, 0), (1, 0), (0, -1), (0, 1)]:  # Left, Right, Down, Up\n",
+    "            ni, nj = i + di, j + dj\n",
+    "            if (ni, nj) in index_map:\n",
+    "                neighbor_index = index_map[(ni, nj)]\n",
+    "                laplacian[index, neighbor_index] = 1\n",
+    "\n",
+    "    return laplacian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-4.,  1.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.],\n",
+       "       [ 1., -4.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.],\n",
+       "       [ 1.,  0., -4.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.],\n",
+       "       [ 0.,  1.,  1., -4.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "         0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "laplacian_circle_test(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def laplacian_circle_fix(n,L): #HIER OOK CHECKEN OF HET KLOPT\n",
+    "    #N = n * n  \n",
+    "    #laplacian = np.zeros((N, N)) \n",
+    "    R = L/2\n",
+    "    coordinates_in_circle = []\n",
+    "    index_of_coordinates_in_circle = []\n",
+    "    \n",
+    "    x = np.linspace(-L/2, L/2, n)\n",
+    "    y = np.linspace(-L/2, L/2, n)\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if x[i]**2 + y[j]**2 <= R**2:\n",
+    "                coordinates_in_circle.append((i, j))\n",
+    "                index = i * n + j  #convert point to index so (2,3) is index 11\n",
+    "                index_of_coordinates_in_circle.append(index)\n",
+    "    \n",
+    "    dim = len(coordinates_in_circle)\n",
+    "    matrix_M = np.zeros((dim,dim))\n",
+    "\n",
+    "    for (i,j) in range(n):  \n",
+    "        if ((i,j) in coordinates_in_circle) and (i == j):  \n",
+    "            matrix_M[i, i] = -4  \n",
+    "\n",
+    "        if (((i - 1),j) in coordinates_in_circle) and (i % n) != 0:\n",
+    "            matrix_M[i, i - 1] = 1\n",
+    "\n",
+    "        if (((i + 1),j) in coordinates_in_circle) and ((i + 1) % n) != 0:\n",
+    "            laplacian[i, i + 1] = 1\n",
+    "            laplacian[i + 1, i] = 1  \n",
+    "\n",
+    "        if (i - n in points):\n",
+    "            laplacian[i, i - n] = 1\n",
+    "            laplacian[i - n, i] = 1  \n",
+    "\n",
+    "        if (i + n in points):\n",
+    "            laplacian[i, i + n] = 1\n",
+    "            laplacian[i + n, i] = 1\n",
+    "\n",
+    "    return laplacian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "YYY = []\n",
+    "YYY.append((2,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(YYY)"
+   ]
   }
  ],
  "metadata": {
