--- a/code/ex3.2.ipynb
+++ b/code/ex3.2.ipynb
@@ -76,338 +76,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[10,\n",
-       " 27,\n",
-       " 28,\n",
-       " 29,\n",
-       " 30,\n",
-       " 31,\n",
-       " 32,\n",
-       " 33,\n",
-       " 34,\n",
-       " 35,\n",
-       " 46,\n",
-       " 47,\n",
-       " 48,\n",
-       " 49,\n",
-       " 50,\n",
-       " 51,\n",
-       " 52,\n",
-       " 53,\n",
-       " 54,\n",
-       " 55,\n",
-       " 56,\n",
-       " 57,\n",
-       " 66,\n",
-       " 67,\n",
-       " 68,\n",
-       " 69,\n",
-       " 70,\n",
-       " 71,\n",
-       " 72,\n",
-       " 73,\n",
-       " 74,\n",
-       " 75,\n",
-       " 76,\n",
-       " 77,\n",
-       " 78,\n",
-       " 79,\n",
-       " 80,\n",
-       " 86,\n",
-       " 87,\n",
-       " 88,\n",
-       " 89,\n",
-       " 90,\n",
-       " 91,\n",
-       " 92,\n",
-       " 93,\n",
-       " 94,\n",
-       " 95,\n",
-       " 96,\n",
-       " 97,\n",
-       " 98,\n",
-       " 99,\n",
-       " 100,\n",
-       " 101,\n",
-       " 102,\n",
-       " 107,\n",
-       " 108,\n",
-       " 109,\n",
-       " 110,\n",
-       " 111,\n",
-       " 112,\n",
-       " 113,\n",
-       " 114,\n",
-       " 115,\n",
-       " 116,\n",
-       " 117,\n",
-       " 118,\n",
-       " 119,\n",
-       " 120,\n",
-       " 121,\n",
-       " 122,\n",
-       " 123,\n",
-       " 127,\n",
-       " 128,\n",
-       " 129,\n",
-       " 130,\n",
-       " 131,\n",
-       " 132,\n",
-       " 133,\n",
-       " 134,\n",
-       " 135,\n",
-       " 136,\n",
-       " 137,\n",
-       " 138,\n",
-       " 139,\n",
-       " 140,\n",
-       " 141,\n",
-       " 142,\n",
-       " 143,\n",
-       " 144,\n",
-       " 145,\n",
-       " 148,\n",
-       " 149,\n",
-       " 150,\n",
-       " 151,\n",
-       " 152,\n",
-       " 153,\n",
-       " 154,\n",
-       " 155,\n",
-       " 156,\n",
-       " 157,\n",
-       " 158,\n",
-       " 159,\n",
-       " 160,\n",
-       " 161,\n",
-       " 162,\n",
-       " 163,\n",
-       " 164,\n",
-       " 165,\n",
-       " 166,\n",
-       " 169,\n",
-       " 170,\n",
-       " 171,\n",
-       " 172,\n",
-       " 173,\n",
-       " 174,\n",
-       " 175,\n",
-       " 176,\n",
-       " 177,\n",
-       " 178,\n",
-       " 179,\n",
-       " 180,\n",
-       " 181,\n",
-       " 182,\n",
-       " 183,\n",
-       " 184,\n",
-       " 185,\n",
-       " 186,\n",
-       " 187,\n",
-       " 190,\n",
-       " 191,\n",
-       " 192,\n",
-       " 193,\n",
-       " 194,\n",
-       " 195,\n",
-       " 196,\n",
-       " 197,\n",
-       " 198,\n",
-       " 199,\n",
-       " 200,\n",
-       " 201,\n",
-       " 202,\n",
-       " 203,\n",
-       " 204,\n",
-       " 205,\n",
-       " 206,\n",
-       " 207,\n",
-       " 208,\n",
-       " 210,\n",
-       " 211,\n",
-       " 212,\n",
-       " 213,\n",
-       " 214,\n",
-       " 215,\n",
-       " 216,\n",
-       " 217,\n",
-       " 218,\n",
-       " 219,\n",
-       " 220,\n",
-       " 221,\n",
-       " 222,\n",
-       " 223,\n",
-       " 224,\n",
-       " 225,\n",
-       " 226,\n",
-       " 227,\n",
-       " 228,\n",
-       " 229,\n",
-       " 230,\n",
-       " 232,\n",
-       " 233,\n",
-       " 234,\n",
-       " 235,\n",
-       " 236,\n",
-       " 237,\n",
-       " 238,\n",
-       " 239,\n",
-       " 240,\n",
-       " 241,\n",
-       " 242,\n",
-       " 243,\n",
-       " 244,\n",
-       " 245,\n",
-       " 246,\n",
-       " 247,\n",
-       " 248,\n",
-       " 249,\n",
-       " 250,\n",
-       " 253,\n",
-       " 254,\n",
-       " 255,\n",
-       " 256,\n",
-       " 257,\n",
-       " 258,\n",
-       " 259,\n",
-       " 260,\n",
-       " 261,\n",
-       " 262,\n",
-       " 263,\n",
-       " 264,\n",
-       " 265,\n",
-       " 266,\n",
-       " 267,\n",
-       " 268,\n",
-       " 269,\n",
-       " 270,\n",
-       " 271,\n",
-       " 274,\n",
-       " 275,\n",
-       " 276,\n",
-       " 277,\n",
-       " 278,\n",
-       " 279,\n",
-       " 280,\n",
-       " 281,\n",
-       " 282,\n",
-       " 283,\n",
-       " 284,\n",
-       " 285,\n",
-       " 286,\n",
-       " 287,\n",
-       " 288,\n",
-       " 289,\n",
-       " 290,\n",
-       " 291,\n",
-       " 292,\n",
-       " 295,\n",
-       " 296,\n",
-       " 297,\n",
-       " 298,\n",
-       " 299,\n",
-       " 300,\n",
-       " 301,\n",
-       " 302,\n",
-       " 303,\n",
-       " 304,\n",
-       " 305,\n",
-       " 306,\n",
-       " 307,\n",
-       " 308,\n",
-       " 309,\n",
-       " 310,\n",
-       " 311,\n",
-       " 312,\n",
-       " 313,\n",
-       " 317,\n",
-       " 318,\n",
-       " 319,\n",
-       " 320,\n",
-       " 321,\n",
-       " 322,\n",
-       " 323,\n",
-       " 324,\n",
-       " 325,\n",
-       " 326,\n",
-       " 327,\n",
-       " 328,\n",
-       " 329,\n",
-       " 330,\n",
-       " 331,\n",
-       " 332,\n",
-       " 333,\n",
-       " 339,\n",
-       " 340,\n",
-       " 341,\n",
-       " 342,\n",
-       " 343,\n",
-       " 344,\n",
-       " 345,\n",
-       " 346,\n",
-       " 347,\n",
-       " 348,\n",
-       " 349,\n",
-       " 350,\n",
-       " 351,\n",
-       " 352,\n",
-       " 353,\n",
-       " 360,\n",
-       " 361,\n",
-       " 362,\n",
-       " 363,\n",
-       " 364,\n",
-       " 365,\n",
-       " 366,\n",
-       " 367,\n",
-       " 368,\n",
-       " 369,\n",
-       " 370,\n",
-       " 371,\n",
-       " 372,\n",
-       " 373,\n",
-       " 374,\n",
-       " 382,\n",
-       " 383,\n",
-       " 384,\n",
-       " 385,\n",
-       " 386,\n",
-       " 387,\n",
-       " 388,\n",
-       " 389,\n",
-       " 390,\n",
-       " 391,\n",
-       " 392,\n",
-       " 393,\n",
-       " 405,\n",
-       " 406,\n",
-       " 407,\n",
-       " 408,\n",
-       " 409,\n",
-       " 410,\n",
-       " 411,\n",
-       " 412,\n",
-       " 413,\n",
-       " 430]"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "laplacian_circle_matrix(21)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -455,94 +123,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 87,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def laplacian_circle_test(n):\n",
-    "    N = n * n \n",
-    "    laplacian = np.zeros((N, N)) \n",
-    "    points_within_boundary = []\n",
-    "\n",
-    "    x = np.linspace(-2, 2, n)  \n",
-    "    y = np.linspace(-2, 2, n)  \n",
-    "\n",
-    "    index_map = {} \n",
-    "    count = 0 \n",
-    "\n",
-    "    for i in range(n):\n",
-    "        for j in range(n):\n",
-    "            if x[i]**2 + y[j]**2 <= 4:\n",
-    "                index = count  # Assign a unique 1D index\n",
-    "                index_map[(i, j)] = index\n",
-    "                points_within_boundary.append((i, j))\n",
-    "                count += 1\n",
-    "\n",
-    "    # Construct Laplacian matrix using finite difference stencil\n",
-    "    for (i, j) in points_within_boundary:\n",
-    "        index = index_map[(i, j)]\n",
-    "        laplacian[index, index] = -4  # Center point\n",
-    "\n",
-    "        # Check and add valid neighbors\n",
-    "        for di, dj in [(-1, 0), (1, 0), (0, -1), (0, 1)]:  # Left, Right, Down, Up\n",
-    "            ni, nj = i + di, j + dj\n",
-    "            if (ni, nj) in index_map:\n",
-    "                neighbor_index = index_map[(ni, nj)]\n",
-    "                laplacian[index, neighbor_index] = 1\n",
-    "\n",
-    "    return laplacian"
+    "==================================================================================================================================================="
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 88,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-4.,  1.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.],\n",
-       "       [ 1., -4.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.],\n",
-       "       [ 1.,  0., -4.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.],\n",
-       "       [ 0.,  1.,  1., -4.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "         0.,  0.,  0.]])"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "laplacian_circle_test(4)"
+    "HERE, WE TRY TO SOLVE THE PROBLEM USING METHOD ONE OF THE HINT"
    ]
   },
   {
@@ -551,76 +142,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def laplacian_circle_fix(n,L): #HIER OOK CHECKEN OF HET KLOPT\n",
-    "    #N = n * n  \n",
-    "    #laplacian = np.zeros((N, N)) \n",
-    "    R = L/2\n",
-    "    coordinates_in_circle = []\n",
-    "    index_of_coordinates_in_circle = []\n",
-    "    \n",
-    "    x = np.linspace(-L/2, L/2, n)\n",
-    "    y = np.linspace(-L/2, L/2, n)\n",
-    "    \n",
+    "#DEZE IS VOLGENS MIJ GOED!!!!!!!!!!!!!!!!!!\n",
+    "\n",
+    "def laplacian_circle_fix(n, L):\n",
+    "    R = L/2  \n",
+    "    coordinates_in_circle = [] \n",
+    "    dictionary_storing = {} \n",
+    "\n",
+    "    x = np.linspace(-R, R, n)\n",
+    "    y = np.linspace(-R, R, n)\n",
+    "\n",
+    "    count = 0 \n",
     "    for i in range(n):\n",
     "        for j in range(n):\n",
     "            if x[i]**2 + y[j]**2 <= R**2:\n",
     "                coordinates_in_circle.append((i, j))\n",
-    "                index = i * n + j  #convert point to index so (2,3) is index 11\n",
-    "                index_of_coordinates_in_circle.append(index)\n",
-    "    \n",
-    "    dim = len(coordinates_in_circle)\n",
-    "    matrix_M = np.zeros((dim,dim))\n",
+    "                dictionary_storing[(i, j)] = count\n",
+    "                count += 1\n",
     "\n",
-    "    for (i,j) in range(n):  \n",
-    "        if ((i,j) in coordinates_in_circle) and (i == j):  \n",
-    "            matrix_M[i, i] = -4  \n",
+    "    dim = len(coordinates_in_circle) \n",
+    "    matrix_M = np.zeros((dim, dim)) \n",
     "\n",
-    "        if (((i - 1),j) in coordinates_in_circle) and (i % n) != 0:\n",
-    "            matrix_M[i, i - 1] = 1\n",
+    "    for count, (i, j) in enumerate(coordinates_in_circle):\n",
+    "        matrix_M[count, count] = -4 \n",
+    "        for a, b in [(-1, 0), (1, 0), (0, -1), (0, 1)]: \n",
+    "            aa, bb = i + a, j + b\n",
+    "            if (aa, bb) in dictionary_storing: \n",
+    "                neighbor_index = dictionary_storing[(aa, bb)]\n",
+    "                matrix_M[count, neighbor_index] = 1\n",
     "\n",
-    "        if (((i + 1),j) in coordinates_in_circle) and ((i + 1) % n) != 0:\n",
-    "            laplacian[i, i + 1] = 1\n",
-    "            laplacian[i + 1, i] = 1  \n",
-    "\n",
-    "        if (i - n in points):\n",
-    "            laplacian[i, i - n] = 1\n",
-    "            laplacian[i - n, i] = 1  \n",
-    "\n",
-    "        if (i + n in points):\n",
-    "            laplacian[i, i + n] = 1\n",
-    "            laplacian[i + n, i] = 1\n",
-    "\n",
-    "    return laplacian"
+    "    return matrix_M"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "YYY = []\n",
-    "YYY.append((2,4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "array([[-4.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0., -4.,  1.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 1.,  1., -4.,  1.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  1., -4.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0., -4.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  1.,  0.,  0.,  1., -4.,  1.,  0.,  0.,  1.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  1.,  0.,  0.,  1., -4.,  1.,  0.,  0.,  1.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  1.,  0.,  0.,  1., -4.,  1.,  0.,  0.,  1.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  1., -4.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  0., -4.,  1.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  1., -4.,  1.,  1.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  1., -4.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0., -4.]])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(YYY)"
+    "laplacian_circle_fix(5,1)"
    ]
   }
  ],
