Circle matrix nonsingular

--- a/code/ex3.2.ipynb
+++ b/code/ex3.2.ipynb
@@ -144,39 +144,41 @@
    "source": [
     "#DEZE IS VOLGENS MIJ GOED!!!!!!!!!!!!!!!!!!\n",
     "\n",
-    "def laplacian_circle_fix(n, L):\n",
+    "def laplacian_circle_fix(n,L):\n",
     "    R = L/2  \n",
     "    coordinates_in_circle = [] \n",
     "    dictionary_storing = {} \n",
     "\n",
-    "    x = np.linspace(-R, R, n)\n",
-    "    y = np.linspace(-R, R, n)\n",
+    "    x = np.linspace(-R,R,n)\n",
+    "    y = np.linspace(-R,R,n)\n",
     "\n",
     "    count = 0 \n",
     "    for i in range(n):\n",
     "        for j in range(n):\n",
     "            if x[i]**2 + y[j]**2 <= R**2:\n",
-    "                coordinates_in_circle.append((i, j))\n",
+    "                coordinates_in_circle.append((i,j))\n",
     "                dictionary_storing[(i, j)] = count\n",
     "                count += 1\n",
     "\n",
     "    dim = len(coordinates_in_circle) \n",
-    "    matrix_M = np.zeros((dim, dim)) \n",
+    "    matrix_M = np.zeros((dim,dim)) \n",
+    "    ZZZ = [(1,0),(-1,0),(0,-1),(0,1)]\n",
     "\n",
-    "    for count, (i, j) in enumerate(coordinates_in_circle):\n",
-    "        matrix_M[count, count] = -4 \n",
-    "        for a, b in [(-1, 0), (1, 0), (0, -1), (0, 1)]: \n",
-    "            aa, bb = i + a, j + b\n",
-    "            if (aa, bb) in dictionary_storing: \n",
-    "                neighbor_index = dictionary_storing[(aa, bb)]\n",
-    "                matrix_M[count, neighbor_index] = 1\n",
+    "    for count,(i,j) in enumerate(coordinates_in_circle):\n",
+    "        matrix_M[count,count] = -4 \n",
+    "        for a,b in ZZZ: \n",
+    "            aa = i + a\n",
+    "            bb = j + b\n",
+    "            if (aa,bb) in dictionary_storing: \n",
+    "                index_ernaast = dictionary_storing[(aa,bb)]\n",
+    "                matrix_M[count,index_ernaast] = 1\n",
     "\n",
     "    return matrix_M"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +199,7 @@
        "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0., -4.]])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
