--- a/code/ex3.2.ipynb
+++ b/code/ex3.2.ipynb
@@ -157,7 +157,7 @@
     "        for j in range(n):\n",
     "            if x[i]**2 + y[j]**2 <= R**2:\n",
     "                coordinates_in_circle.append((i,j))\n",
-    "                dictionary_storing[(i, j)] = count\n",
+    "                dictionary_storing[(i,j)] = count\n",
     "                count += 1\n",
     "\n",
     "    dim = len(coordinates_in_circle) \n",
@@ -178,7 +178,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GGG = laplacian_circle_fix(5,1)\n",
+    "b=np.zeros(13)\n",
+    "b[4] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -199,13 +230,35 @@
        "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0., -4.]])"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "laplacian_circle_fix(5,1)"
+    "GGG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.0047619 , -0.02747253, -0.01904762, -0.00824176, -0.27271062,\n",
+       "       -0.09084249, -0.03571429, -0.01391941, -0.00347985, -0.02747253,\n",
+       "       -0.01904762, -0.00824176, -0.0047619 ])"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lin.solve(GGG,b)"
    ]
   }
  ],
